Fixed dropdown menu z-index when in a div with an absolute position.

--- a/src/app/components/common-ui/Dropdown/_style.scss
+++ b/src/app/components/common-ui/Dropdown/_style.scss
@@ -19,7 +19,7 @@ $ar-dropdown-border-color: $color-grey-light !default;
     }
 
     &-menu {
-        z-index: 1;
+        z-index: 1000000;
         position: absolute;
         width: 100%;
         bottom: 0;
